# rmbg-py

./: .gitignore  Dockerfile  README.md  app.py  auth.py  basic.py  db.py  example_config.py  pyproject.toml  requirements.txt  run.py
rmbg/: __init__.py  auth.py
rmbg/static/: style.css
rmbg/templates/: index.html  login.html  register.html
static/js/: upload.js
templates/: base.html
